feat: Use dotenv

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.4",
     "cuid": "^2.1.4",
     "debug": "^2.6.9",
+    "dotenv": "^6.1.0",
     "ejs": "^2.5.9",
     "email-templates": "^5.0.2",
     "express": "^4.16.4",
