refactor(auth): bcrypt-nodejs -> bcrypt npm pkg; callback -> promises for pass hash

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "npm run test:withcoverage"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
