docs: Documented api-s and added npm script to generate apidoc

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:fix": "eslint './**/*.js' --quiet --fix",
     "test:nocoverage": "ava",
     "test:withcoverage": "nyc ava",
-    "test": "npm run test:withcoverage"
+    "test": "npm run test:withcoverage",
+    "gendoc": "apidoc -i routes/ -o public/docs"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
