refactor(config): Completely do away with config.js file & use ENV vars instead

--- a/env.SAMPLE
+++ b/env.SAMPLE
@@ -1,5 +1,6 @@
 NODE_ENV="development"
 SITE_URL="http://localhost:3000"
+API_VERSION="1"
 SECRET=""
 MONGODB_CONNECTION_STRING="mongodb://localhost:27017/skeleton"
 REDIS_CONNECTION_STRING=""
