--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mongoose": "^5.10.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "needle": "^2.5.2",
     "node-mocks-http": "^1.9.0",
     "randomstring": "^1.1.5",
     "serve-favicon": "^2.5.0",
