--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "cuid": "^2.1.6",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
-    "ejs": "^2.6.2",
-    "email-templates": "^6.0.0",
+    "ejs": "^3.1.8",
+    "email-templates": "^10.0.1",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
+    "express-jwt": "^7.7.7",
     "express-session": "^1.16.2",
     "helmet": "^3.23.3",
     "http-errors": "~1.6.2",
@@ -46,7 +46,7 @@
     "mongodb-memory-server": "^3.1.3",
     "mongoose": "^5.10.3",
     "morgan": "^1.9.1",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "node-mocks-http": "^1.9.0",
     "randomstring": "^1.1.5",
     "serve-favicon": "^2.5.0",
@@ -57,8 +57,8 @@
     "bin/"
   ],
   "devDependencies": {
-    "apidoc": "^0.17.7",
-    "ava": "^3.12.1",
+    "apidoc": "^0.53.1",
+    "ava": "^5.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.22.0",
