--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "Sayan \"Riju\" Chakrabarti <s26c.sayan@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "npm run serve",
-    "serve": "nodemon ./bin/www",
+    "start": "npm run serve:dev",
+    "serve:dev": "nodemon ./bin/www",
+    "serve:prod": "node ./bin/www",
     "debug": "nodemon --inspect ./bin/www",
     "lint": "npm run lint:quiet",
     "lint:quiet": "eslint --quiet './**/*.js'",
@@ -36,32 +37,33 @@
     "ejs": "^3.1.8",
     "email-templates": "^10.0.1",
     "express": "^4.17.1",
-    "express-jwt": "^7.7.7",
+    "express-jwt": "^8.2.1",
     "express-session": "^1.16.2",
     "helmet": "^3.23.3",
     "http-errors": "~1.6.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongodb-memory-server": "^3.1.3",
-    "mongoose": "^5.10.3",
+    "mongoose": "^6.8.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-mocks-http": "^1.9.0",
+    "pino": "^8.8.0",
+    "pino-pretty": "^9.1.1",
     "randomstring": "^1.1.5",
     "serve-favicon": "^2.5.0",
     "tinyurl": "^1.1.7"
   },
   "eslintIgnore": [
-    "public/",
-    "bin/"
+    "public/"
   ],
   "devDependencies": {
     "apidoc": "^0.53.1",
     "ava": "^5.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
     "nodemon": "^2.0.4",
