--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "env": {
     "es6": true,
     "node": true,
@@ -28,6 +29,8 @@
     "max-len": [
       "warn",
       {
+        "code": 100,
+        "tabWidth": 2,
         "ignoreComments": true,
         "ignoreTrailingComments": true,
         "ignoreUrls": true,
