--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:fix": "eslint './**/*.js' --quiet --fix",
     "test:nocoverage": "ava",
     "test:withcoverage": "nyc ava",
-    "test": "npm run test:withcoverage",
+    "test": "NODE_NO_WARNINGS=1 npm run test:withcoverage",
     "gendoc": "apidoc -i routes/ -o public/docs"
   },
   "dependencies": {
@@ -44,7 +44,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
-    "mongodb-memory-server": "^3.1.3",
+    "mongodb-memory-server": "^8.9",
     "mongoose": "^6.8.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
@@ -61,9 +61,9 @@
   "devDependencies": {
     "apidoc": "^0.53.1",
     "ava": "^5.1.0",
-    "eslint": "^8.13.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.1",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
     "nodemon": "^2.0.4",
