--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:fix": "eslint './**/*.js' --quiet --fix",
     "test:nocoverage": "ava",
     "test:withcoverage": "nyc ava",
-    "test": "NODE_NO_WARNINGS=1 npm run test:withcoverage",
+    "test": "npm run test:withcoverage",
     "gendoc": "apidoc -i routes/ -o public/docs"
   },
   "dependencies": {
@@ -66,7 +66,8 @@
     "faker": "^4.1.0",
     "husky": "^1.3.1",
     "nodemon": "^2.0.4",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "sinon": "^15.0.1"
   },
   "husky": {
     "hooks": {
