--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-import": "^2.26.0",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
+    "node-mongodb-fixtures": "^3.2.9",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
     "sinon": "^15.0.1"
