--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "faker": "^4.1.0",
     "husky": "^1.3.1",
     "nodemon": "^2.0.4",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "pino-loki": "^2.1.3"
   },
   "husky": {
     "hooks": {
