--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "gendoc": "apidoc -i routes/ -o public/docs"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "cuid": "^2.1.6",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
     "ejs": "^3.1.8",
