chore(npm): updated packages

--- a/env.SAMPLE
+++ b/env.SAMPLE
@@ -13,7 +13,7 @@ SMTP_AUTH_PASSWORD=""
 LOG_FILE_PATH=""
 LOG_FILE_LEVEL="error"
 
-ENABLE_GRAFANA_LOGS=yes
+ENABLE_GRAFANA_LOGS=no
 GRAFANA_APP_LABEL="express-skeleton"
 GRAFANA_HOST=""
 GRAFANA_USER=""
